about us image responsive

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
 <div id="about" class="about-us section">
   <div class="section-header" data-aos="fade-up">
-    <h2>About <em>What We Do</em> &amp; Who We Are</h2>
+    <h2>About What We Do Who We Are</h2>
   </div>
   <div class="container" data-aos="fade-up">
     <div class="row">
